# TaskHound

./: .gitignore  COMMIT_MESSAGE.txt  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
BOF/: README.md  compile.sh
BOF/AdaptixC2/: beacon.h  taskhound.axs  taskhound.c
taskhound/: cli.py  config.py  engine.py
taskhound/output/: printer.py  summary.py  writer.py
taskhound/parsers/: highvalue.py  task_xml.py
taskhound/smb/: connection.py  credguard.py  tasks.py
taskhound/utils/: helpers.py  logging.py  sid_resolver.py
