[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taskhound"
version = "0.5.0"
description = "SchedTask PrivCheck with BloodHound enrichment"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "0xr0BIT", email = "r.unglaub@prosec-networks.com" }]
keywords = ["security", "bloodhound", "windows", "pentest", "taskscheduler"]
requires-python = ">=3.9"
dependencies = [
    "impacket>=0.11.0",
    "lxml>=4.9.0"
]

[project.urls]
Homepage = "https://github.com/0xr0BIT/TaskHound"
Issues = "https://github.com/0xr0BIT/TaskHound/issues"

[project.scripts]
taskhound = "taskhound.cli:main"
